--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@
 CC = gcc
 
 # Compiler flags
-CFLAGS = -Wall -Wextra -std=c99
+CFLAGS = -Wall -Wextra -std=c99 -fopenmp
 
 # Source files
 SRCS = rabbitfox.c events.c
